--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,7 +9,11 @@ spring.datasource.password=
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 
-
+#spring.datasource.url=jdbc:mysql://ingsoftware1server.mysql.database.azure.com/proyecto_final?useTimezone=true&serverTimezone=UTC
+#spring.datasource.dbname=proyecto_final
+#spring.datasource.username=arnunez@ingsoftware1server
+#spring.datasource.password=Merida123
+#spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 # JWT
 security.jwt.secret=ghk45jgherogho834go3h4g
 security.jwt.issuer=Main
@@ -28,3 +32,8 @@ spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
 spring.mail.properties.mail.smtp.starttls.required=true
 spring.mail.properties.mail.smtp.quitwait=false
+
+
+spring.jpa.properties.hibernate.dialect= org.hibernate.dialect.MySQL5InnoDBDialect
+# Hibernate ddl auto (create, create-drop, validate, update)
+spring.jpa.hibernate.ddl-auto= update
