--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,13 +7,18 @@ spring.datasource.dbname=proyecto_final
 spring.datasource.username=root
 spring.datasource.password=
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.jpa.hibernate.ddl-auto=update
 
 
-#spring.datasource.url=jdbc:mysql://ingsoftware1server.mysql.database.azure.com/proyecto_final?useTimezone=true&serverTimezone=UTC
-#spring.datasource.dbname=proyecto_final
-#spring.datasource.username=arnunez@ingsoftware1server
-#spring.datasource.password=Merida123
+#spring.datasource.url=jdbc:mysql://proyectofinal1.mysql.database.azure.com/proyectofinal1?useTimezone=true&serverTimezone=UTC
+#spring.datasource.dbname=proyectofinal1
+#spring.datasource.username=arnunez@proyectofinal1
+#spring.datasource.password=Admin1234
 #spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+#spring.jpa.database-platform=org.hibernate.dialect.MySQL5DBDialect
+#spring.jpa.hibernate.ddl-auto=update
+
+
 # JWT
 security.jwt.secret=ghk45jgherogho834go3h4g
 security.jwt.issuer=Main
@@ -36,4 +41,3 @@ spring.mail.properties.mail.smtp.quitwait=false
 
 spring.jpa.properties.hibernate.dialect= org.hibernate.dialect.MySQL5InnoDBDialect
 # Hibernate ddl auto (create, create-drop, validate, update)
-spring.jpa.hibernate.ddl-auto= update
